Se han hecho estilos para todos los viewports más habituales. Modificaciones menores en el index

--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
 <div class="retro-prompt" id="retroPrompt">
     <div class="prompt-container">
         <div class="close" id="closePrompt">&times;</div>
-        <p>Choose a Memory Card:</p>
+        <p>Choose a Memory Card</p>
         <ul class="memory-card-list">
             <li autofocus class="memory-card-option" data-value="card1" tabindex="0">Memory Card 1</li>
             <li class="memory-card-option" data-value="card2" tabindex="0">Memory Card 2</li>
         </ul>
     </div>
 </div>
-<svg viewBox="0 0 690 120" xmlns="http://www.w3.org/2000/svg">
+<svg viewBox="0 0 715 120" xmlns="http://www.w3.org/2000/svg">
     <style type="text/css">
         text {
             filter: url(#filter);
-            fill: white;
+            fill: #ddd;
             font-family: 'Share Tech Mono', sans-serif;
-            font-size: 5.63rem;
+            font-size: 6rem;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
         }
@@ -93,12 +93,12 @@
         </filter>
     </defs>
     <g>
-        <text x="0" y="100">VisualDynamics</text>
+        <text x="" y="90">VisualDynamics</text>
     </g>
 </svg>
 <div class="retro-message" id="no-memory">
     <div class="prompt-message">
-        <div class="close">X</div>
+        <div class="close">&times;</div>
             NO MEMORY CARD SELECTED<br>
             PLEASE F5 TO CONTINUE...
     </div>
@@ -107,7 +107,7 @@
 <div id="music-player">
     <button id="play-pause-btn"></button>
 </div>
-<div class="coming" id="coming">COMING SOON</div>
+<div class="coming" id="coming">COMING SOON!</div>
 <audio id="mariocoin" src="/assets/sound/index/mario-coin.mp3"></audio>
 <audio id="bgm" loop src="/assets/sound/index/bgm.mp3">Tu navegador no soporta audio.</audio>
 <audio id="cursor" src="/assets/sound/index/cursor.mp3"></audio>
