--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link href="src/css/index-style.css" rel="stylesheet">
     <title>VisualDynamics</title>
     <!-- JS -->
-    <script defer src="src/js/main.js"></script>
+    <script defer src="src/js/index.js"></script>
 </head>
 <body>
 <div class="retro-prompt" id="retroPrompt">
