--- a/main/pilla_el_div/index.html
+++ b/main/pilla_el_div/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Daniel Alonso Lázaro">
     <meta name="author" content="Víctor Hellín Sáez">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../src/css/">
+    <link rel="stylesheet" href="../../src/css/pilla_el_div-style.css">
     <title>DATOR GAMES</title>
     <script defer src="../../src/js/pilla_el_div.js"></script>
 </head>
