--- a/main/main.html
+++ b/main/main.html
@@ -12,7 +12,186 @@
 </head>
 <body>
 <div>
+    <p>⏪</p>
+    <p>⏸️</p>
+    <p>⏩</p>
+    <svg viewBox="0 0 690 120" xmlns="http://www.w3.org/2000/svg">
+    <style type="text/css">
+        text {
+            filter: url(#filter);
+            fill: white;
+            font-family: 'Share Tech Mono', sans-serif;
+            font-size: 5.63rem;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+        }
+    </style>
+    <defs>
+        <filter id="filter">
+            <feFlood flood-color="red" result="flood1"/>
+            <feFlood flood-color="black" result="flood2"/>
+            <feOffset dx="3" dy="0" in="SourceGraphic" result="off1a"/>
+            <feOffset dx="2" dy="0" in="SourceGraphic" result="off1b"/>
+            <feOffset dx="-3" dy="0" in="SourceGraphic" result="off2a"/>
+            <feOffset dx="-2" dy="0" in="SourceGraphic" result="off2b"/>
+            <feComposite in="flood1" in2="off1a" operator="in" result="comp1"/>
+            <feComposite in="flood2" in2="off2a" operator="in" result="comp2"/>
+            <feMerge result="merge1" width="100%" x="0">
+                <feMergeNode in="black"/>
+                <feMergeNode in="comp1"/>
+                <feMergeNode in="off1b"/>
+                <animate attributeName="y" dur="4s" id="y" keyTimes="0; 0.362; 0.368; 0.421; 0.440; 0.477; 0.518;
+                0.564; 0.593; 0.613; 0.644; 0.693; 0.721; 0.736; 0.772; 0.818; 0.844; 0.894; 0.925; 0.939; 1"
+                         repeatCount="indefinite" values="104px; 104px; 30px; 105px; 30px; 2px; 2px; 50px; 40px; 105px;
+                         105px; 20px; 6ßpx; 40px; 104px; 40px; 70px; 10px; 30px; 104px; 102px"/>
+                <animate attributeName="height" dur="4s" id="h" keyTimes="0; 0.362; 0.368; 0.421; 0.440; 0.477; 0.518;
+                0.564; 0.593; 0.613; 0.644; 0.693; 0.721; 0.736; 0.772; 0.818; 0.844; 0.894; 0.925; 0.939; 1"
+                         repeatCount="indefinite" values="10px; 0px; 10px; 30px; 50px; 0px; 10px; 0px; 0px; 0px; 10px;
+                         50px; 40px; 0px; 0px; 0px; 40px; 30px; 10px; 0px; 50px"/>
+            </feMerge>
+            <feMerge height="65px" result="merge2" width="100%" x="0" y="60px">
+                <feMergeNode in="black"/>
+                <feMergeNode in="comp2"/>
+                <feMergeNode in="off2b"/>
+                <animate attributeName="y" dur="4s" id="y"
+                         keyTimes="0; 0.055; 0.100; 0.125; 0.159; 0.182; 0.202; 0.236; 0.268; 0.326; 0.357; 0.400;
+                         0.408; 0.461; 0.493; 0.513; 0.548; 0.577; 0.613; 1" repeatCount="indefinite"
+                         values="103px; 104px; 69px; 53px; 42px; 104px; 78px; 89px; 96px; 100px; 67px; 50px; 96px;
+                         66px; 88px; 42px; 13px; 100px; 100px; 104px;"/>
+                <animate attributeName="height" dur="4s" id="h"
+                         keyTimes="0; 0.055; 0.100; 0.125; 0.159; 0.182; 0.202; 0.236; 0.268; 0.326; 0.357; 0.400;
+                         0.408; 0.461; 0.493; 0.513;  1" repeatCount="indefinite"
+                         values="0px; 0px; 0px; 16px; 16px; 12px; 12px; 0px; 0px; 5px; 10px; 22px; 33px; 11px;
+                         0px; 0px; 10px"/>
+            </feMerge>
+            <feMerge>
+                <feMergeNode in="SourceGraphic"/>
+                <feMergeNode in="merge1"/>
+                <feMergeNode in="merge2"/>
+            </feMerge>
+        </filter>
+    </defs>
+    <g>
+        <text x="0" y="100">VisualDynamics</text>
+    </g>
+</svg>
+    <div class="carousel">
+        <div class="carrusel-list" id="carrusel-list">
 
+            <button class="carrusel-arrow carrusel-prev" id="button-prev" data-button="button-prev">
+                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-left"
+                     class="svg-inline--fa fa-chevron-left fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg"
+                     viewBox="0 0 320 512">
+                    <path fill="currentColor"
+                          d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z">
+                    </path>
+                </svg>
+            </button>
+
+            <div class="carrusel-track" id="track">
+                <div class="carrusel">
+                    <div>
+                        <a href="/">
+                            <h4> <small>1</small> Mas </h4>
+                            <picture>
+                                <img src="../assets/img/index/fondo_inicio.gif" alt="imagen">
+                            </picture>
+                        </a>
+                    </div>
+                </div>
+                <div class="carrusel">
+                    <div>
+                        <a href="/">
+                            <h4> <small>2</small> Mas </h4>
+                            <picture>
+                                <img src="../assets/img/index/fondo_inicio.gif" alt="imagen">
+                            </picture>
+                        </a>
+                    </div>
+                </div>
+                <div class="carrusel">
+                    <div>
+                        <a href="/">
+                            <h4> <small>3</small> Mas </h4>
+                            <picture>
+                                <img src="../assets/img/index/fondo_inicio.gif" alt="imagen">
+                            </picture>
+                        </a>
+                    </div>
+                </div>
+                <div class="carrusel">
+                    <div>
+                        <a href="/">
+                            <h4> <small>4</small> Mas </h4>
+                            <picture>
+                                <img src="../assets/img/index/fondo_inicio.gif" alt="imagen">
+                            </picture>
+                        </a>
+                    </div>
+                </div>
+                <div class="carrusel">
+                    <div>
+                        <a href="/">
+                            <h4> <small>5</small> Mas </h4>
+                            <picture>
+                                <img src="../assets/img/index/fondo_inicio.gif" alt="imagen">
+                            </picture>
+                        </a>
+                    </div>
+                </div>
+                <div class="carrusel">
+                    <div>
+                        <a href="/">
+                            <h4> <small>6</small> Mas </h4>
+                            <picture>
+                                <img src="../assets/img/index/fondo_inicio.gif" alt="imagen">
+                            </picture>
+                        </a>
+                    </div>
+                </div>
+                <div class="carrusel">
+                    <div>
+                        <a href="/">
+                            <h4> <small>7</small> Mas </h4>
+                            <picture>
+                                <img src="../assets/img/index/fondo_inicio.gif" alt="imagen">
+                            </picture>
+                        </a>
+                    </div>
+                </div>
+                <div class="carrusel">
+                    <div>
+                        <a href="/">
+                            <h4> <small>8</small> Mas </h4>
+                            <picture>
+                                <img src="../assets/img/index/fondo_inicio.gif" alt="imagen">
+                            </picture>
+                        </a>
+                    </div>
+                </div>
+                <div class="carrusel">
+                    <div>
+                        <a href="/">
+                            <h4> <small>9</small> Mas </h4>
+                            <picture>
+                                <img src="../assets/img/index/fondo_inicio.gif" alt="imagen">
+                            </picture>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <button class="carrusel-arrow carrusel-next" id="button-next" data-button="button-next">
+                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right"
+                     class="svg-inline--fa fa-chevron-right fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg"
+                     viewBox="0 0 320 512">
+                    <path fill="currentColor"
+                          d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z">
+                    </path>
+                </svg>
+            </button>
+        </div>
+    </div>
 </div>
 </body>
 </html>
