Normalizados todos los archivos con el HTML boilerplate

--- a/main/ajedrez/index.html
+++ b/main/ajedrez/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="description" content="Ajedrez de DATOR GAMES">
+    <meta name="description" content="'Ajedrez' de VisualDynamics">
     <meta name="author" content="Daniel Alonso Lázaro">
     <meta name="author" content="Víctor Hellín Sáez">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../src/css/ajedrez-style.css">
-    <title>DATOR GAMES</title>
+    <title>'Ajedrez' de VisualDynamics</title>
     <script defer src="../../src/js/ajedrez.js"></script>
 </head>
 <body>
