--- a/main/main.html
+++ b/main/main.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="description" content="PÁGINA PRINCIPAL DE VISUALDYNAMICS">
+    <meta name="description" content="PÁGINA PRINCIPAL DE VisualDynamics">
     <meta name="author" content="Daniel Alonso Lázaro">
     <meta name="author" content="Víctor Hellín Sáez">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
