--- a/main/memory_cards/index.html
+++ b/main/memory_cards/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="description" content="Memory Cards de DATOR GAMES">
+    <meta name="description" content="'Memory cards' de VisualDynamics">
     <meta name="author" content="Daniel Alonso Lázaro">
     <meta name="author" content="Víctor Hellín Sáez">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../src/css/memory_cards-style.css">
-    <title>DATOR GAMES</title>
+    <title>'Memory Cards' de VisualDynamics</title>
     <script defer src="../../src/js/memory_cards.js"></script>
 </head>
 <body>
