--- a/main/pilla_el_div/index.html
+++ b/main/pilla_el_div/index.html
@@ -2,13 +2,13 @@
 <html lang="es">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="description" content="Pilla el Div de DATOR GAMES">
+    <meta name="description" content="'Pilla el Div' de VisualDynamics">
     <meta name="author" content="Daniel Alonso Lázaro">
     <meta name="author" content="Víctor Hellín Sáez">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../src/css/pilla_el_div-style.css">
-    <title>DATOR GAMES</title>
-    <script defer src="../../src/js/pilla_el_div.js"></script>
+    <link rel="stylesheet" href="../../src/css/">
+    <title>'Pilla el Div' de VisualDynamics</title>
+    <script defer src="../../src/js/"></script>
 </head>
 <body>
 <div>
