--- a/main/cuatro_en_raya/index.html
+++ b/main/cuatro_en_raya/index.html
@@ -2,13 +2,13 @@
 <html lang="es">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="description" content="Cuatro en Raya de DATOR GAMES">
+    <meta name="description" content=" de VisualDynamics"> <!-- TODO RELLENAR DESCRIPCIÓN DE PÁGINA -->
     <meta name="author" content="Daniel Alonso Lázaro">
     <meta name="author" content="Víctor Hellín Sáez">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../src/css/cuatro_en_raya-style.css">
-    <title>DATOR GAMES</title>
-    <script defer src="../../src/js/cuatro_en_raya.js"></script>
+    <link rel="stylesheet" href="../../src/css/"> <!-- TODO RELLENAR RUTA CORRECTA DE RECURSO -->
+    <title>VisualDynamics</title>
+    <script defer src="../../src/js/"></script> <!-- TODO RELLENAR RUTA CORRECTA DE RECURSO -->
 </head>
 <body>
 <div>
