--- a/main/hundir_la_flota/index.html
+++ b/main/hundir_la_flota/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="description" content="Hundir la flota de DATOR GAMES">
+    <meta name="description" content=" de VisualDynamics">
     <meta name="author" content="Daniel Alonso Lázaro">
     <meta name="author" content="Víctor Hellín Sáez">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../src/css/hundir-la-flota-style.css">
-    <title>DATOR GAMES</title>
+    <title>'Hundir la flota' de VisualDynamics</title>
     <script defer src="../../src/js/hundir_la_flota.js"></script>
 </head>
 <body>
