--- a/main/snake/index.html
+++ b/main/snake/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="description" content="Snake de DATOR GAMES">
+    <meta name="description" content="'Snake' de VisualDynamics">
     <meta name="author" content="Daniel Alonso Lázaro">
     <meta name="author" content="Víctor Hellín Sáez">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../src/css/snake-style.css">
-    <title>DATOR GAMES</title>
+    <title>VisualDynamics</title>
     <script defer src="../../src/js/snake.js"></script>
 </head>
 <body>
