Arreglos en el index y avanzes en main

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             PLEASE F5 TO CONTINUE...
     </div>
 </div>
-<div class="titulo texto-oculto">PRESS START!</div>
+<span id="play"><div class="titulo texto-oculto">PRESS START!</div></span>
 <div id="music-player">
     <button id="play-pause-btn"></button>
 </div>
@@ -111,5 +111,6 @@
 <audio id="mariocoin" src="/assets/sound/index/mario-coin.mp3"></audio>
 <audio id="bgm" loop src="/assets/sound/index/bgm.mp3">Tu navegador no soporta audio.</audio>
 <audio id="cursor" src="/assets/sound/index/cursor.mp3"></audio>
+<audio id="welcome" src="/assets/sound/index/welcome-message.wav"></audio>
 </body>
 </html>
