Terminada cabezera y comenzado atrapa al div

--- a/main/main.html
+++ b/main/main.html
@@ -29,11 +29,11 @@
 <div>
     <div id="reproductor">
         <div id="botones">
-            <div class="botones" id="atras-parar">◀◀</div>
-            <div class="botones" id="parar">▐▐</div>
-            <div class="botones" id="adelante-parar">▶▶</div>
+            <div class="botones" id="atras-continuar">◀◀</div>
+            <div class="botones" id="continuar">▶</div>
+            <div class="botones" id="adelante-continuar">▶▶</div>
         </div>
-        <marquee id="titulo-cancion">Título de la canción</marquee>
+        <marquee id="titulo-cancion"></marquee>
         <svg id="titulo" viewBox="-50 20 690 120" xmlns="http://www.w3.org/2000/svg">
             <style type="text/css">
                 text {
@@ -195,6 +195,10 @@
         </div>
     </div>
 </div>
-<audio id="bgm" loop src="/assets/sound/index/bgm.mp3">Tu navegador no soporta audio.</audio>
+<div id="canciones">
+    <audio src="/assets/sound/canciones/neon-gaming-128925.mp3">Neon Gaming</audio>
+    <audio src="/assets/sound/canciones/short-8-bit-background-music-for-video-mobile-game-old-school-164704.mp3">Old School</audio>
+    <audio src="/assets/sound/canciones/gaming-8bit-music-hyperloop-by-infraction-amp-alexi-action-124334%20(1).mp3">Hyperloop</audio>
+</div>
 </body>
 </html>
