Seguimos trabajando parte 2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- HTML Meta Tags -->
     <meta content="text/html;charset=UTF-8" http-equiv="Content-Type">
-    <meta content="Landing page de VisualDynamics" name="description">
+    <meta content="Landing page de VisualDynamics." name="description">
     <meta content="Daniel Alonso Lázaro" name="author">
     <meta content="Víctor Hellín Sáez" name="author">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
