Añadiendo los templates y preparando los archivos

--- a/main/buscaminas/index.html
+++ b/main/buscaminas/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Daniel Alonso Lázaro">
     <meta name="author" content="Víctor Hellín Sáez">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../src/css/buscaminas-style.css">
+    <link rel="stylesheet" href="../../src/css/buscaminas.css">
     <title>'Buscaminas' de VisualDynamics</title>
     <script defer src="../../src/js/buscaminas.js"></script>
 </head>
