--- a/main/pong/index.html
+++ b/main/pong/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Daniel Alonso Lázaro">
     <meta name="author" content="Víctor Hellín Sáez">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../src/css/pong-style.css">
+    <link rel="stylesheet" href="../../src/css/pong.css">
     <title>'Pong' de VisualDynamics</title>
     <script defer src="../../src/js/pong.js"></script>
 </head>
