--- a/main/unnamed/index.html
+++ b/main/unnamed/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Daniel Alonso Lázaro">
     <meta name="author" content="Víctor Hellín Sáez">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../src/css/unnamed-style.css">
+    <link rel="stylesheet" href="../../src/css/unnamed.css">
     <title>'Unnamed' de VisualDynamics</title>
     <script defer src="../../src/js/unnamed.js"></script>
 </head>
