--- a/main/snake/index.html
+++ b/main/snake/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Daniel Alonso Lázaro">
     <meta name="author" content="Víctor Hellín Sáez">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../src/css/snake-style.css">
+    <link rel="stylesheet" href="../../src/css/snake.css">
     <title>VisualDynamics</title>
     <script defer src="../../src/js/snake.js"></script>
 </head>
